--- a/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/AndroidManifest.xml
+++ b/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
             android:name=".bt_connect"
             android:screenOrientation="landscape"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
         <activity
@@ -32,6 +29,15 @@
             android:name=".Tests"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
+        </activity>
+
+        <activity
+            android:name=".ConnectBluetooth"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
