--- a/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/AndroidManifest.xml
+++ b/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
         </activity>
 
         <activity
@@ -24,7 +24,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>>
         </activity>
     </application>
 
