--- a/projeto/v1.2 (APP)/SynesthesiaVision/app/build.gradle
+++ b/projeto/v1.2 (APP)/SynesthesiaVision/app/build.gradle
@@ -23,3 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.0'
 }
+
+ant.importBuild 'assets.xml'
+preBuild.dependsOn(list, checksum)
+clean.dependsOn(clean_assets)
