--- a/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/AndroidManifest.xml
+++ b/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/miniatura"
@@ -16,16 +20,23 @@
             android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
             android:name=".ConnectBluetooth"
             android:screenOrientation="landscape">
 
+        </activity>
+
+        <activity android:name=".RecognitionClass">
+
+        </activity>
+
+        <activity android:name=".RecognitionTest">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
